# AdventOfCode

./: .gitignore  README.md  pyproject.toml
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day__x.py  helpers.py
2023/: day1.py  day_2.py
2024/: day1.py  day2.py  day_3.py
