[tool.poetry]
name = "adventOfCode"
version = "0.0.1"
description = "AdventOfCode 2022"
authors = ["Wassim Abida <wassim.abida@jellysmack.com>"]

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple/"
secondary = false
default = true


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = {version = "^1.4.3", source = "public"}
jupyterlab = "^3.5.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
